--- a/TurnGray/turn_gray_dialog_base.ui
+++ b/TurnGray/turn_gray_dialog_base.ui
@@ -6,17 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>340</width>
-    <height>154</height>
+    <width>373</width>
+    <height>155</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Turn Gray</string>
   </property>
-  <layout class="QFormLayout" name="formLayout">
-   <property name="fieldGrowthPolicy">
-    <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-   </property>
+  <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="label_composer">
      <property name="text">
@@ -28,9 +25,12 @@
     <widget class="QComboBox" name="comboBox_composer"/>
    </item>
    <item row="1" column="0">
-    <widget class="QLabel" name="label_foreground_color">
+    <widget class="QCheckBox" name="checkBox_foreground">
      <property name="text">
       <string>Foreground:</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -53,7 +53,7 @@
     </widget>
    </item>
    <item row="2" column="0">
-    <widget class="QLabel" name="label_background_color">
+    <widget class="QCheckBox" name="checkBox_background">
      <property name="text">
       <string>Background:</string>
      </property>
@@ -70,7 +70,7 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="2">
+   <item row="3" column="1">
     <widget class="QDialogButtonBox" name="button_box">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
