--- a/TurnGray/turn_gray_dialog_base.ui
+++ b/TurnGray/turn_gray_dialog_base.ui
@@ -35,7 +35,7 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QgsColorButtonV2" name="mColorButtonForeground">
+    <widget class="QgsColorButton" name="mColorButtonForeground">
      <property name="color">
       <color>
        <red>127</red>
@@ -60,7 +60,7 @@
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QgsColorButtonV2" name="mColorButtonBackground">
+    <widget class="QgsColorButton" name="mColorButtonBackground">
      <property name="color">
       <color>
        <red>255</red>
@@ -84,7 +84,7 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QgsColorButtonV2</class>
+   <class>QgsColorButton</class>
    <extends>QToolButton</extends>
    <header>qgis.gui</header>
   </customwidget>
